syntax = "proto3";
package ProtobufModels;
option csharp_namespace = "SensorsAndEngines.ProtobufModels";

message DigitalSensor {
	int32 Timestamp = 1;
	bool Value = 2;
}

message AnalogSensor {
	int32 UpperRange = 1;
	int32 LowerRange = 2;
	float Value = 3;
}

message Sensor {
	oneof Type { 
		DigitalSensor Digital = 1;
		AnalogSensor Analog = 2;
	}
	
	string MeasurementUnit = 3;
	int32 Pin = 4;
}

message Sensors {
	repeated Sensor List = 1;
	int32 Timestamp = 2;
}
